# cnprrb

./: .gitignore  README.md  actuator.cppold
auxmatlab/aux_functions/: AngleWrap.m  drawrobot.m
auxmatlab/aux_functions_prob/: gauss.m  histogram.m  motion_noisy_1D.m  plot2.m  plot2bis.m  plot_gauss.m  plot_product_gauss.m  plot_sum_gauss.m  sampling.m  sampling2.m
l08a/: ejercicio_coppeliasim_3torres_alumnos.ttt  lab08.2.lua  lab08.3.lua  lab08.lua  lab09.1.lua  lab09.1.ttt
l09.2/: l09_puntuable.ttt
p01lab01/: cuadrado.m  cuadrado_particulas.m  cuadrado_ruido.m  cuadrado_velocidades.m  p01lab01.mlx  pose_comp.m
p03lab02/: AngleWrap.m  EjercicioPuntuableLse.mlx  calc_pesos.m  crear_landmarks.m  cypr_localization_LSE.mlx  dist_ang.m  ep01_loc_fp.m  ep01_loc_lse.m  estimar_posicion.m  inicializar_robot.m  leer_distancias.m  leer_sensor.m  memoria_cypr_pr2.m  memoria_cypr_pr2.mlx  mover_particulas.m  p03lab02.mlx  pose_comp.m
p05matlab/: matlab_intro.m
ric_ws/: cop  key  nav  nodes  parget  parlist  parset  ran  rea  ric_ws.kdev4  sercall  serfind  serint  serlist  sertype  sqr  tur
ric_ws/.kdev4/: ric_ws.kdev4
ric_ws/src/.kdev4/: src.kdev4
ric_ws/src/bash/: p1  p2  p3  p4  p5  src_square.sh
ric_ws/src/navigation/: .CMakeLists.txt.kate-swp  CMakeLists.txt  package.xml
ric_ws/src/navigation/bash/: cop  launch_copelia.sh  launch_navigation.sh  p0  p1  p2  p3  p4  p5  p6  src_keybrd.sh  src_ninguno.sh  src_random.sh  tur
ric_ws/src/navigation/include/navigation/: actuator.hpp  arm_controller.hpp  common.h  keyController.hpp  keybrdctrl.hpp  randomctrl.hpp  reactivo.hpp  reactvctrl.hpp  rndController.hpp  sqrController.hpp  squarectrl.hpp  topics.h  topics_old.h
ric_ws/src/navigation/launch/: copelia.launch  demo1.launch  demo2.launch  navigation.launch  simulador.launch  simulador2.launch  src_aleatorio.sh  src_cuadrado.sh  src_ninguno.sh  src_teclado.sh  turtle.launch
ric_ws/src/navigation/src/: actuator.cpp  arm_controller.cpp  keyController.cpp  keybrdctrl.cpp  randomctrl.cpp  reactivo.cpp  reactvctrl.cpp  rndController.cpp  sqrController.cpp  squarectrl.cpp
ric_ws/src/navigation/srv/: Resize.srv  Status.srv
ric_ws/src/src/: src.kdev4
ric_ws/src/src/.kdev4/: src.kdev4
ric_ws/src/src/navigation/: CMakeLists.txt
ric_ws/src/src/navigation/include/navigation/: actuator.hpp  keybrdctrl.hpp  reactvctrl.hpp  squarectrl.hpp  topics.h
ric_ws/src/src/navigation/launch/: src_reactv.sh
ric_ws/src/src/navigation/src/: actuator.cpp  keybrdctrl.cpp  randomctrl.cpp  squarectrl.cpp
t01localiz/: Robot.m  angle_sum.m  comp_noisy.m  comp_odom.m  create_map.m  create_robot.m  display_robot.m  dist_angle.m  est_fp.m  est_lse.m  read_sensors.m  t01localiz_fp.m  t01localiz_lse.m  t01localiz_oo.m  t01localiz_oov2.m  update_figure.m
t02lect1/: PoseComposition.mlx  tcomp.m
t03lect1/: gaussian_2d.m  gaussian_2d_cov.m  muestreo.m  normal_density.m  plotea_normal.m  t03lect1.m
t05lect2/: Lect 2 - Robot Control Architectures ii.md  Lect 2 - Robot Control Architectures.md
